@@ -60,6 +60,12 @@ EchoTossLog $WORKDIR$/echotoss.log
 LogFileDir $LOGDIR$
 # In diesem Verzeichnis werden die Logfiles gespeichert
 
+LogLevels 23456789
+# Einstellung, wie ausfuehrlich Protokoll darueber gefuehrt werden soll,
+# was das Fido-System macht.
+# Level 1 ist weggelassen, damit nur dann gelogged wird, wenn auch wirklich
+# was passiert ist (d.h. Mails bearbeitet wurden)
+
 DupeHistoryDir $WORKDIR$/dupes
 # Hier werden die Dupe-Datenbanken gespeichert. Mit deren Hilfe
 # koennen Dupes (Mails, die mehrfach ankommen, aber identisch sind)
@@ -76,8 +82,8 @@ NetMailArea NETMAIL $NETMAILDIR$
 # In dieser Area werden alle Netmails (persoenliche Mails) abgelegt
 
 BadArea BADMAIL $MSGBASEDIR$/badmail -b Squish
-# Hier werden alle Mails, die auf Grund von Fehlern nicht in die
-# Areas einsortiert werden konnten, abgelegt
+# Hier werden alle Mails abgelegt, die auf Grund von Fehlern nicht in die
+# Areas einsortiert werden konnten
 
 DupeArea DUPES $MSGBASEDIR$/dupes -b Squish
 # Hier werden die Dupes abgelegt, wenn sie nicht geloescht werden
@@ -106,6 +112,7 @@ Pack  lzh lha a \$a \$f
 Unpack  "pushd \$p > /dev/null ; lha efi \$a ; popd > /dev/null" 2 2d6c68
 Pack  lha lha ao \$a \$f
 
+# Diese sind nicht so weit verbreitet und deshalb auskommentiert
 # Unpack  "pak e /wn \$a \$p \$f" -2 fe
 # Pack  pak pak a \$a \$f
 
@@ -143,4 +150,49 @@ Route crash no-route *:*
 
 Include $CFGDIR$/msgbase.cfg
 # In dieser Datei werden die Echos konfiguriert
+
+createAreasCase Lower
+# neue Areas mit kleingeschriebenem Areanamen (z.B. "fidosoft" statt 
+# "FIDOSOFT") anlegen
+
+areasFileNameCase Lower
+# neue Areas mit kleingeschriebenem Dateinamen anlegen
+
+fidoUserList fidouser.lst
+# Wird im Nodelist-Verzeichnis angelegt und enthaelt einen Index aller
+# in den Nodelisten enthaltenen User
+
+
+Nodelist points24
+# Points24 ist eine Liste von deutschen Points. Die Eintragung dort ist
+# freiwillig, aber sehr empfehlenswert. Nur damit kann jemand Deine Adresse
+# herausfinden, wenn er gerade keine von Dir geschriebene Mail hat
+
+DiffUpdate $PROTINBOUND$/pr24diff
+# Updates zu dieser Liste werden im protected inbound gesucht. Nicht sehr
+# elegant, da der Inbound auf diese Weise unnoetig gross wird. Ich muss mir 
+# da was besseres einfallen lassen. Aber es funktioniert schonmal. :)
+
+DefaultZone 2
+# fuer den Fall, dass die Zone-Zeile in der Pointlist fehlt. Zone 2 ist 
+# Europa.
+
+NodelistFormat points24
+# gibt an, dass es sich um eine Pointliste im Points24-Format handelt.
+
+
+Nodelist nodelist
+# Die Liste aller Fido-Nodes. Im Prinzip eine Art Adressbuch. Damit weiss
+# Dein Computer, welche Adresse ein bestimmter Mensch hat und wie er ihn
+# erreichen kann (Telefonnummer fuer Modem und/oder ISDN u.ae.)
+
+DiffUpdate $PROTINBOUND$/nodediff
+# Auch die Updates zu dieser Liste bleiben im Inbound liegen.
+
+DefaultZone 2
+# Recht egal, da die Nodelist alle Fido-Zonen (1-6) enthaelt, aber sicher
+# ist sicher :)
+
+NodelistFormat standard
+# Ne normale Nodeliste halt :)
 
