@@ -55,7 +55,7 @@ MSGEDCFG=\\"~/.fido/msged.cfg\\"
 ##############################################################################
 
 # C-Compiler
-CC=gcc
+CC=$CC$
 
 #Msged needs access to a termcap library. Define it's name here.
 #On Linux, termcap is integrated into ncurses:
@@ -65,54 +65,57 @@ TERMCAP=ncurses
 #TERMCAP=terminfo
 
 # C++-Compiler
-GPP=g++
+GPP=$GPP$
 
 # Pascal-Compiler (the compiler is optional, but the value of this
 # variable must be defined even if you don't have a Pascal compiler).
 PC=ppc386
 
 # archiver (for object-files)
-AR=ar
+AR=$AR$
 
 # how to build shared libraries
 # use gcc on Linux and FreeBSD
 # use ld on BeOS and also try ld if gcc does not work for you
 # only "gcc" will put so version numbers into the shared object 
-# MKSHARED=ld
-MKSHARED=gcc 
+@ifdef beos
+MKSHARED=ld
+@else
+MKSHARED=gcc
+@endif
 
 # remove file
-RM=rm
+RM=$RM$
 
 # The "install" program.
-# On Linux and FreeBSD/NetBSD, use this:
-INSTALL=install
+# On Linux and FreeBSD/NetBSD, use install
 # On Tru64 Unix, use this:
 # INSTALL=installbsd
 # On Solaris, use this:
 # INSTALL=/usr/ucb/install
+INSTALL=$INSTALL$
 
 # link file (DOS: copy file)
-LN=ln
+LN=$LN$
 
 # create directory
-MKDIR=mkdir
+MKDIR=$MKDIR$
 
 # update dynamic library cache
 # If your operating system does not need this, you may comment out this line.
-LDCONFIG=/sbin/ldconfig
+LDCONFIG=$LDCONFIG$
 
 # rename a file
-MV=mv
+MV=$MV$
 
 #copy a file
-CP=cp
+CP=$CP$
 
 #Make a library file usable. You may leave this empty if it is n/a.
-RANLIB=ar s
+RANLIB=$RANLIB$
 
 # C-style header file to pascal unit converter (shipped with fpc)
-H2PAS=h2pas
+H2PAS=$H2PAS$
 
 #############################################################################
 # program options
@@ -120,21 +123,10 @@ H2PAS=h2pas
 
 # type of operating system (UNIX,MSDOS,OS2,WINNT)
 # for BeOS, use UNIX!
-@ifdef linux
-OSTYPE=UNIX
-@else
-OSTYPE=UNIX
-@endif
+OSTYPE=$OSTYPE$
 
 # short name of operating system (used for PID lines etc.)
-@ifdef linux
-UNAME=LNX
-@else
-UNAME=UNIX
-@endif
-#UNAME=BSD
-#UNAME=OS2
-#UNAME=BEOS
+UNAME=$UNAME$
 
 # Do you want debug information? (This is only for developers.)
 DEBUG=$debug$
@@ -155,7 +147,7 @@ SHORTNAMES=0
 # If you set DYNLIBS=0, but have Unix/Linux, you might want to add add
 # "-static" to the OPTCFLAGS and WARNCFLAGS variables (above) in order 
 # to avoid linkage with old .so files that may be  floating around
-DYNLIBS=1
+DYNLIBS=$DYNLIBS$
 
 # C-compiler: specify name of executable
 EXENAMEFLAG=-o
@@ -170,7 +162,7 @@ OPTCFLAGS=-c -s -O3 -fomit-frame-pointer -fstrength-reduce -fPIC
 DEBCFLAGS=-c -ggdb
 
 # C-compiler: additional defines, for features of your OS
-ADDCDEFS=-DHAS_POPEN
+ADDCDEFS=$ADDCDEFS$
 # On Solaris, Msged only works with the curses interface, so use:
 #ADDCDEFS=-DHAS_POPEN -DUSE_CURSES
 # Some Systems (e.g. old Linux systems like SuSe 6) uses different style of semctl. Try -DHAS_SEMUN
@@ -207,30 +199,30 @@ IMOPT=-c
 IIOPT=-c
 
 # options for linking files
-LNOPT=-sf
+LNOPT=$LNOPT$
 
 # archiver options
-AR_R = r
+AR_R = $AR_R$
 
 # options for creating directories
-MKDIROPT=-p
+MKDIROPT=$MKDIROPT$
 
 #############################################################################
 # file extensions
 #############################################################################
 
 # extension of executable (e.g. ".exe")
-EXE=
+EXE=$EXE$
 
 # extension of object file
-OBJ=.o
+OBJ=$OBJ$
 
 # extension of (static) libs
-LIB=.a
+LIB=$LIB$
 
 # extension of compiled pascal units
-TPU=.ppu
+TPU=$TPU$
 
 # directory separator (DOS: "\", Unix: "/")
-DIRSEP=/
+DIRSEP=$DIRSEP$
 
