@@ -31,3 +31,14 @@ Packer $PACKER$
 EchoMailFlavour Normal
 # PKTs mit der Prioritaet Normal in den Outbound legen
 
+AllowEmptyPktPwd secure
+# Akzeptierte Pakete, die angeblich vom Uplink kommen, auch dann, wenn sie
+# kein Passwort enthalten (aber im secure inbound liegen)
+# Eigentlich nicht zu empfehlen (damit ist das Einwerfen von gefaelschter
+# Mail moeglich), aber leider haben viele Uplinks ihre Programme so
+# konfiguriert, dass sie kein Packet-Password setzen.
+# Wenn Du sicher bist, dass alle PKTs (Net- UND Echomail) Deines Uplinks
+# das Passwort enthalten (kannst Du mit pktinfo ueberpruefen), solltest Du
+# diese Option unbedingt of "off" stellen.
+
+
