@@ -303,7 +303,7 @@ IF UNIX
   ;*Some* xterms can handle color, so you might want to try Switch Colors on
   ELIF XTERM
     Switch Colors Off
-    Switch BS127 Off
+    Switch BS127 On
 
   ;VT100 or some other terminal - colors may or may not work here
   ELSE
